# CloudScanner

./: .flake8  .gitignore  .pylintrc  ARCHITECTURE.md  CONTRIBUTING.md  ISSUES.md  PROGRESS.md  README.md  REFERENCE.md  REFERENCE2.md  SECURITY.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_reports.py
.github/: CODEOWNERS
.github/workflows/: scan.yml  tests.yml
scanner/: Dockerfile
scanner/src/: main.py  scan.py
scanner/src/checks/: keyvault.py  nsg.py  storage.py
scanner/src/core/: clients.py  cvss.py  mitre.py  model.py  reporter.py
scanner/tests/: conftest.py  test_keyvault.py  test_nsg.py  test_storage.py
